Added directory to test results corrected build.xml